# hapticgloves

./: CMakeLists.txt  driver.vrdrivermanifest  haptic_glove_firmware.ino  test.bat
arduino_code/: haptic_glove_firmware.ino
arduino_firmware/: haptic_glove_firmware.ino
resources/: driver.vrdrivermanifest
resources/input/: hand_tracking_profile.json  haptic_glove_input_profile.json  haptic_glove_profile.json  index_controller_profile.,json
resources/localization/: localization.json
resources/settings/: default.vrsettings
src/: driver_haptic_glove.cpp  driver_haptic_glove.cpp.backup  driverlog.cpp  driverlog.h  haptic_glove_device.cpp  haptic_glove_device.h
tools/: serial_monitor.py
